--- a/Prototypes/Ambev.Prototypes.WebApi/Ambev.Prototypes.WebApi.csproj
+++ b/Prototypes/Ambev.Prototypes.WebApi/Ambev.Prototypes.WebApi.csproj
@@ -8,6 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.2.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="7.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Ambev.Prototypes.Domain\Ambev.Prototypes.Domain.csproj" />
+    <ProjectReference Include="..\Ambev.Prototypes.Infra\Ambev.Prototypes.Infra.csproj" />
   </ItemGroup>
 
 </Project>
